More issues trying to align this properly

--- a/css/stylesPhone.css
+++ b/css/stylesPhone.css
@@ -846,6 +846,7 @@ Screenshots
 	font-size: 10px;
     font-weight: 400;
 	width: 100px;
+	margin-left: 50px;
 }
 .screenshots figcaption .caption-content {
     position: absolute;
